--- a/ts/extensions/tsconfig.json
+++ b/ts/extensions/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "none",
+    "module": "es2020",
     "outDir": "../../js",
     "removeComments": false,
     "strict": true,
