renamed global.d.ts -> extensions.d.ts

--- a/ts/extensions/tsconfig.json
+++ b/ts/extensions/tsconfig.json
@@ -10,5 +10,5 @@
     "isolatedModules": false,
     "noEmitHelpers": true
   },
-  "files": ["./extensions.ts", "./globals.d.ts"]
+  "files": ["./extensions.ts", "extensions.d.ts"]
 }
